--- a/alembic/README
+++ b/alembic/README
@@ -1,54 +1,55 @@
-# Generic Single-Database Configuration
+# Alembic Migration for SQLite
 
-This guide explains how to modify a table in SQLite using Alembic, since SQLite doesn't support some direct table modifications like other SQL databases.
+This guide explains how to use Alembic to alter tables in SQLite, as SQLite doesn't support some direct table modifications like other SQL databases.
 
-## Steps to Configure Alembic for SQLite:
+## Table of Contents
+- [Prerequisites](#prerequisites)
+- [Installation](#installation)
+- [Usage](#usage)
+- [Contributing](#contributing)
+- [License](#license)
 
-1. **Install Alembic:**
+## Prerequisites
+- Python 3.7 or later
+- Alembic installed via pip
+- SQLite database
+
+## Installation
+1. Install Alembic:
     ```bash
     pip install alembic
     ```
 
-2. **Initialize Alembic:**
-    Initialize Alembic, which will generate a configuration file and necessary folders:
+2. Initialize Alembic in your project directory:
     ```bash
     alembic init alembic
     ```
-    This will create an `alembic.ini` file. In this file, update the database URL line to point to your SQLite database:
+
+3. Modify the `alembic.ini` file to point to your SQLite database:
     ```ini
     sqlalchemy.url = sqlite:///yourdatabase.db
     ```
 
-3. **Modify `script.py.mako`:**
-    In the `alembic` folder, locate the `script.py.mako` file. Here, you can define the revision and the actions for database modifications.
+4. In the `alembic` folder, modify `script.py.mako`:
+    - Set `revision` and `down_revision`:
+        ```python
+        revision = 'head'
+        down_revision = None
+        ```
 
-    - Add the following revision lines:
-    ```python
-    revision = 'head'
-    down_revision = None
-    ```
+    - Add new columns in the `upgrade()` function:
+        ```python
+        op.add_column('product', sa.Column('image_filename', sa.String(length=255), nullable=True))
+        op.add_column('product', sa.Column('description', sa.String(length=255), nullable=True))
+        ```
 
-    - Inside the `upgrade()` function, add the new columns you want to add. For example:
-    ```python
-    op.add_column('product', sa.Column('image_filename', sa.String(length=255), nullable=True))
-    op.add_column('product', sa.Column('description', sa.String(length=255), nullable=True))
-    ```
+    - Define the corresponding actions in the `downgrade()` function:
+        ```python
+        op.drop_column('product', 'image_filename')
+        op.drop_column('product', 'description')
+        ```
 
-    - Inside the `downgrade()` function, add the corresponding drop column actions to remove the columns if needed:
-    ```python
-    op.drop_column('product', 'image_filename')
-    op.drop_column('product', 'description')
-    ```
-
-4. **Apply the Migration:**
-    To apply the migration and update your SQLite database, run the following command:
-    ```bash
-    alembic upgrade head
-    ```
-    This will apply the changes and create a new database instance with the added columns.
-
-## Summary
-
-- Use Alembic to handle migrations in SQLite when direct table modifications aren't possible.
-- The `upgrade()` function is used to add new columns, while `downgrade()` removes them.
-- Applying migrations with `alembic upgrade head` will modify the database schema.
+## Usage
+To apply the migration and update your SQLite database, run:
+```bash
+alembic upgrade head
