--- a/alembic/README
+++ b/alembic/README
@@ -1,3 +1,3 @@
 Generic single-database configuration.
 
-For detailed instructions on using Alembic for database migrations, refer to the [Alembic README](alembic/README.md).
+For detailed instructions on using Alembic for database migrations, refer to the [QRScanner README](QRScanner/README.md).
